# bob

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  flake.nix  installer.iss  package.json  pubspec.yaml  tauri.conf.json
.claude/: settings.local.json
.github/workflows/: build-flatpak.yml  build-macos.yml  build-windows.yml
assets/: icon.pxd
assets/AppIcon.icon/: icon.json
bun/: .npmignore  EXAMPLE.md  LICENSE.md  PUBLISH.md  README.md  package.json  tsconfig.json
bun/src/: cli.ts  config.ts  index.ts  server.ts  uuid.ts
lib/: main.dart
lib/config/: constants.dart
lib/extensions/: task_status_extension.dart
lib/models/: project.dart  project_template.dart  result.dart
lib/providers/: project_provider.dart
lib/screens/: home_screen.dart
lib/services/: binary_manager.dart  key_request_service.dart  launch_service.dart  preferences_service.dart  project_service.dart  task_service.dart  web_publication_service.dart
lib/utils/: ansi_parser.dart  circular_buffer.dart  json_utils.dart  process_utils.dart  task_utils.dart  ui_utils.dart
lib/widgets/: launch_status.dart  launch_target_form.dart  left_pane.dart  project_config_form.dart  project_creation_form.dart  right_pane.dart  settings_form.dart  terminal_output.dart
linux/: CMakeLists.txt  com.onclebob.Bob.desktop  dev.xmit.bob.desktop  dev.xmit.bob.metainfo.xml  dev.xmit.bob.yaml
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: MainFlutterWindow.swift
macos/Runner.xcodeproj/: project.pbxproj
src/: main.rs
(+6 files in other folders)
