[package]
name = "bob"
version = "0.1.0"
edition = "2024"

[dependencies]
confy = "2"
dirs = "5"
iced = { version = "0.13", features = ["advanced", "tokio"] }
iced_fonts = "0.1"
notify = "7"
notify-debouncer-full = "0.4"
rfd = "0.15"
rquickjs = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
zip = "2"
futures = "0.3"
